# xwallpaper

./: LICENSE  Makefile.am  README.md  _xwallpaper  argparse.h  autogen.sh  config.h.in  configure.ac  debug.c  functions.h  load_farbfeld.c  load_jpeg.c  load_png.c  load_webp.c  load_xpm.c  main.c  options.c  outputs.c  seccomp.c  util.c  xsetwallpaper.1  xwallpaper.1
